--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,9 @@
 <style>
     body {
         background-image: url("https://media.giphy.com/media/xThta8nFTMstY6MQ2k/giphy.gif");
-        background-size: cover;
+        background-size: contain;
+         background-position: center;
+        width: 100%;
     }
 
     .chaychu1 span,
